--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,22 @@
 {
   "docsets_to_publish": [
     {
+      "docset_name": "office-outlook-weather-info-docs",
+      "build_source_folder": "officedocs-dev-outlook-weather-info",
+      "build_output_subfolder": "officedocs-dev-outlook-weather-info",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
+    },
+    {
       "docset_name": "office-ucwa-sdk-ref-docs",
       "build_source_folder": "officedocs-dev-ucwa-sdk-pr",
       "build_output_subfolder": "office-ucwa-sdk-ref-docs",
